# fqw-auth

./: meson.build
lua_scripts/: add_refresh.lua  delete_refresh.lua  get_refresh_token_hash.lua
src/: Handlers.cpp  Handlers.h  Utils.cpp  Utils.h  main.cpp
src/app/: main.cpp
src/platform/: AuthFactory.cpp  AuthFactory.h  AuthServer.cpp  AuthServer.h  Utils.cpp  Utils.h
src/platform/handlers/: ErrorHandler.h  LoginHandler.cpp  LoginHandler.h  RefreshHandler.cpp  RefreshHandler.h  RegisterHandler.cpp  RegisterHandler.h
subprojects/: fqw-devkit.wrap
